# TracerBench

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/libapp/: CMakeLists.txt  libapp.cpp
src/libapp/include/libapp/: libapp.h
src/libtracer/: CMakeLists.txt  call_tracer.cpp  trace_points.c
src/libtracer/include/libtracer/: call_tracer.h  trace_points.h
test/: CMakeLists.txt
test/libapp/: CMakeLists.txt  libapp_tests.cpp
